Solve the layout issue in Mozilla

--- a/Equations-To-Plot/css/layout.css
+++ b/Equations-To-Plot/css/layout.css
@@ -57,7 +57,7 @@
 }
 
 .slider-div-value {
-    margin-left: 30%;
+    margin-left: 10%;
 }
 
 .slider {
